--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: RDP
+name: Simple RDP Access
 
 on:
   workflow_dispatch:
@@ -11,10 +11,10 @@ jobs:
     steps:
     - name: Enable RDP
       run: |
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0 -Force
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0 -Force
         netsh advfirewall firewall add rule name="RDP-Port" dir=in action=allow protocol=TCP localport=3389
-        Restart-Service TermService
+        Restart-Service TermService -Force
 
     - name: Create User
       run: |
@@ -27,9 +27,8 @@ jobs:
 
     - name: Get IP Address
       run: |
-        $ip = (Test-Connection -ComputerName $env:COMPUTERNAME -Count 1).IPV4Address.IPAddressToString
+        $ip = (Test-Connection -ComputerName (hostname) -Count 1).IPV4Address.IPAddressToString
         echo "RDP_IP=$ip" >> $env:GITHUB_ENV
-        Write-Host "RDP IP Address: $ip"
 
     - name: Display Connection Info
       run: |
@@ -40,14 +39,14 @@ jobs:
         Write-Host "Username: RDPUser" 
         Write-Host "Password: $env:RDP_PASSWORD"
         Write-Host "=========================================="
+        Write-Host "Connect using Microsoft Remote Desktop"
         Write-Host "Session will expire in 60 minutes"
         Write-Host "=========================================="
 
-    - name: Keep Alive
+    - name: Keep Session Alive
       run: |
-        $startTime = Get-Date
-        while (((Get-Date) - $startTime).TotalMinutes -lt 55) {
-          Write-Host "[$(Get-Date -Format 'HH:mm:ss')] RDP session active..."
-          Start-Sleep -Seconds 30
+        for ($i = 0; $i -lt 55; $i++) {
+          Write-Host "[$(Get-Date -Format 'HH:mm:ss')] RDP session active... ($i/55 minutes)"
+          Start-Sleep -Seconds 60
         }
         Write-Host "Session ending in 5 minutes..."
