--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,52 +1,248 @@
-name: Simple RDP Access
+name: Secure RDP with Tailscale
 
 on:
   workflow_dispatch:
+    inputs:
+      session_duration:
+        description: 'Durée de la session (minutes)'
+        required: true
+        default: '3600'
+        type: choice
+        options:
+          - '120'
+          - '240'
+          - '360'
+          - '480'
+          - '720'
+
+env:
+  SESSION_DURATION: ${{ github.event.inputs.session_duration }}
 
 jobs:
-  rdp-access:
+  secure-rdp:
     runs-on: windows-latest
-    timeout-minutes: 3600
+    timeout-minutes: ${{ env.SESSION_DURATION }}
 
     steps:
-    - name: Enable RDP
-      run: |
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0 -Force
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0 -Force
-        netsh advfirewall firewall add rule name="RDP-Port" dir=in action=allow protocol=TCP localport=3389
-        Restart-Service TermService -Force
+      - name: Vérifier l'environnement
+        run: |
+          Write-Host "🔍 Vérification de l'environnement Windows..."
+          systeminfo | Select-String "OS Name", "OS Version"
 
-    - name: Create User
-      run: |
-        $password = -join ((65..90) + (97..122) + (48..57) | Get-Random -Count 12 | % {[char]$_})
-        $securePass = ConvertTo-SecureString $password -AsPlainText -Force
-        New-LocalUser -Name "RDPUser" -Password $securePass -AccountNeverExpires
-        Add-LocalGroupMember -Group "Administrators" -Member "RDPUser"
-        Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDPUser"
-        echo "RDP_PASSWORD=$password" >> $env:GITHUB_ENV
+      - name: Configurer RDP de manière sécurisée
+        run: |
+          Write-Host "🛠️ Configuration de RDP..."
+          
+          # Activer RDP
+          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
+                           -Name "fDenyTSConnections" -Value 0 -Force
+          
+          # Pour la compatibilité, désactiver NLA temporairement
+          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
+                           -Name "UserAuthentication" -Value 0 -Force
+          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
+                           -Name "SecurityLayer" -Value 0 -Force
 
-    - name: Get IP Address
-      run: |
-        $ip = (Test-Connection -ComputerName (hostname) -Count 1).IPV4Address.IPAddressToString
-        echo "RDP_IP=$ip" >> $env:GITHUB_ENV
+          # Configurer le pare-feu
+          netsh advfirewall firewall delete rule name="RDP-Tailscale" 2>$null
+          netsh advfirewall firewall add rule name="RDP-Tailscale" `
+            dir=in action=allow protocol=TCP localport=3389 `
+            description="Accès RDP via Tailscale"
 
-    - name: Display Connection Info
-      run: |
-        Write-Host "=========================================="
-        Write-Host "RDP CONNECTION INFORMATION"
-        Write-Host "=========================================="
-        Write-Host "IP Address: $env:RDP_IP"
-        Write-Host "Username: RDPUser" 
-        Write-Host "Password: $env:RDP_PASSWORD"
-        Write-Host "=========================================="
-        Write-Host "Connect using Microsoft Remote Desktop"
-        Write-Host "Session will expire in 60 minutes"
-        Write-Host "=========================================="
+          # Redémarrer les services RDP
+          Get-Service -Name "TermService" | Restart-Service -Force
+          Start-Service -Name "UmRdpService" -ErrorAction SilentlyContinue
 
-    - name: Keep Session Alive
-      run: |
-        for ($i = 0; $i -lt 55; $i++) {
-          Write-Host "[$(Get-Date -Format 'HH:mm:ss')] RDP session active... ($i/55 minutes)"
-          Start-Sleep -Seconds 60
-        }
-        Write-Host "Session ending in 5 minutes..."
+          Write-Host "✅ RDP configuré avec succès"
+
+      - name: Créer un utilisateur sécurisé
+        run: |
+          Write-Host "👤 Création de l'utilisateur RDP..."
+          
+          # Générer un mot de passe robuste
+          $charTypes = @{
+              Majuscules = [char[]](65..90)      # A-Z
+              Minuscules = [char[]](97..122)     # a-z
+              Chiffres   = [char[]](48..57)      # 0-9
+              Speciaux   = [char[]](33,35,36,37,38,42,43,45,61,63,64) # !#$%&*+-=?@
+          }
+          
+          $motDePasse = @()
+          foreach ($type in $charTypes.GetEnumerator()) {
+              $motDePasse += $type.Value | Get-Random -Count 3
+          }
+          $motDePasse = -join ($motDePasse | Sort-Object { Get-Random })
+          
+          # Créer l'utilisateur
+          $securePassword = ConvertTo-SecureString $motDePasse -AsPlainText -Force
+          New-LocalUser -Name "UtilisateurRDP" -Password $securePassword -AccountNeverExpires
+          Add-LocalGroupMember -Group "Administrators" -Member "UtilisateurRDP"
+          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "UtilisateurRDP"
+          
+          # Vérifier la création
+          if (Get-LocalUser -Name "UtilisateurRDP" -ErrorAction SilentlyContinue) {
+              Write-Host "✅ Utilisateur créé avec succès"
+              echo "RDP_USER=UtilisateurRDP" >> $env:GITHUB_ENV
+              echo "RDP_PASSWORD=$motDePasse" >> $env:GITHUB_ENV
+          } else {
+              Write-Error "❌ Échec de la création de l'utilisateur"
+              exit 1
+          }
+
+      - name: Installer et configurer Tailscale
+        run: |
+          Write-Host "📡 Installation de Tailscale..."
+          
+          # Télécharger Tailscale
+          $tailscaleURL = "https://pkgs.tailscale.com/stable/tailscale-setup-latest-amd64.msi"
+          $installerPath = "$env:TEMP\tailscale-$env:GITHUB_RUN_ID.msi"
+          
+          try {
+              Invoke-WebRequest -Uri $tailscaleURL -OutFile $installerPath
+              Write-Host "✅ Téléchargement réussi"
+          } catch {
+              Write-Error "❌ Échec du téléchargement de Tailscale"
+              exit 1
+          }
+
+          # Installer silencieusement
+          Start-Process msiexec.exe -ArgumentList @("/i", "`"$installerPath`"", "/quiet", "/norestart") -Wait
+          Remove-Item $installerPath -Force
+
+          # Attendre que le service soit installé
+          $timeout = 0
+          while (-not (Test-Path "$env:ProgramFiles\Tailscale\tailscale.exe") -and $timeout -lt 30) {
+              Start-Sleep -Seconds 2
+              $timeout++
+          }
+
+          if (Test-Path "$env:ProgramFiles\Tailscale\tailscale.exe") {
+              Write-Host "✅ Tailscale installé avec succès"
+          } else {
+              Write-Error "❌ Échec de l'installation de Tailscale"
+              exit 1
+          }
+
+      - name: Établir la connexion Tailscale
+        run: |
+          Write-Host "🔗 Connexion à Tailscale..."
+          
+          if (-not ${{ secrets.TAILSCALE_AUTH_KEY }}) {
+              Write-Error "❌ Clé d'authentification Tailscale manquante"
+              exit 1
+          }
+
+          # Configurer Tailscale
+          & "$env:ProgramFiles\Tailscale\tailscale.exe" up `
+            --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} `
+            --hostname="github-runner-$env:GITHUB_RUN_ID" `
+            --accept-routes=false `
+            --ssh=false
+
+          # Obtenir l'IP Tailscale
+          $ipTailscale = $null
+          $tentatives = 0
+          do {
+              Start-Sleep -Seconds 3
+              $ipTailscale = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
+              $tentatives++
+              Write-Host "Tentative $tentatives/10 - IP: $ipTailscale"
+          } while (-not $ipTailscale -and $tentatives -lt 10)
+
+          if ($ipTailscale) {
+              echo "TAILSCALE_IP=$ipTailscale" >> $env:GITHUB_ENV
+              Write-Host "✅ Connecté à Tailscale - IP: $ipTailscale"
+          } else {
+              Write-Error "❌ Impossible d'obtenir une IP Tailscale"
+              exit 1
+          }
+
+      - name: Vérifier l'accessibilité RDP
+        run: |
+          Write-Host "🔍 Vérification de l'accessibilité RDP..."
+          
+          # Vérifier que le service RDP fonctionne
+          $serviceRDP = Get-Service -Name "TermService"
+          if ($serviceRDP.Status -ne "Running") {
+              Write-Error "❌ Le service RDP n'est pas en cours d'exécution"
+              exit 1
+          }
+
+          # Tester la connectivité
+          $testConnexion = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389 -WarningAction SilentlyContinue
+          
+          if ($testConnexion.TcpTestSucceeded) {
+              Write-Host "✅ Connectivité RDP vérifiée sur $env:TAILSCALE_IP:3389"
+          } else {
+              Write-Warning "⚠️ La connexion TCP a échoué, mais le service continue"
+          }
+
+      - name: Afficher les informations de connexion
+        run: |
+          $delimiteur = "=" * 60
+          Write-Host ""
+          Write-Host "🚀 $delimiteur"
+          Write-Host "   ACCÈS RDP SÉCURISÉ - READY"
+          Write-Host "   $delimiteur"
+          Write-Host "   🌐 Adresse: $env:TAILSCALE_IP"
+          Write-Host "   👤 Utilisateur: $env:RDP_USER"
+          Write-Host "   🔑 Mot de passe: $env:RDP_PASSWORD"
+          Write-Host "   ⏱️ Durée: $env:SESSION_DURATION minutes"
+          Write-Host "   $delimiteur"
+          Write-Host "   📋 Instructions:"
+          Write-Host "   1. Ouvrez le Bureau à distance (mstsc.exe)"
+          Write-Host "   2. Entrez l'adresse: $env:TAILSCALE_IP"
+          Write-Host "   3. Utilisez les identifiants ci-dessus"
+          Write-Host "   4. La session se terminera automatiquement"
+          Write-Host "   $delimiteur"
+          Write-Host ""
+
+      - name: Maintenir la session active
+        run: |
+          $debut = Get-Date
+          $dureeTotale = [int]$env:SESSION_DURATION
+          
+          Write-Host "🕐 Session RDP démarrée à: $(Get-Date)"
+          Write-Host "⏳ Durée configurée: $dureeTotale minutes"
+          
+          while ($true) {
+              $tempsEcoule = [int]((Get-Date) - $debut).TotalMinutes
+              $tempsRestant = $dureeTotale - $tempsEcoule
+              
+              if ($tempsRestant -le 0) {
+                  Write-Host "⏰ Session expirée - Arrêt automatique"
+                  break
+              }
+              
+              # Vérifier l'état de Tailscale périodiquement
+              if ($tempsEcoule % 5 -eq 0) {
+                  $statutTailscale = & "$env:ProgramFiles\Tailscale\tailscale.exe" status --json | ConvertFrom-Json
+                  if ($statutTailscale.BackendState -eq "Running") {
+                      Write-Host "[$(Get-Date -Format 'HH:mm:ss')] ✅ Session active - $tempsRestant minutes restantes"
+                  } else {
+                      Write-Warning "⚠️ Problème de connexion Tailscale détecté"
+                  }
+              }
+              
+              Start-Sleep -Seconds 60
+          }
+
+      - name: Nettoyage final
+        if: always()
+        run: |
+          Write-Host "🧹 Nettoyage des ressources..."
+          
+          # Supprimer l'utilisateur
+          Remove-LocalUser -Name "UtilisateurRDP" -ErrorAction SilentlyContinue
+          
+          # Désactiver RDP
+          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
+                           -Name "fDenyTSConnections" -Value 1 -Force
+          
+          # Supprimer la règle firewall
+          netsh advfirewall firewall delete rule name="RDP-Tailscale" -ErrorAction SilentlyContinue
+          
+          # Déconnecter Tailscale
+          & "$env:ProgramFiles\Tailscale\tailscale.exe" down -ErrorAction SilentlyContinue
+          
+          Write-Host "✅ Nettoyage terminé - Environnement sécurisé"
