--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: RDP with Tailscale
+name: RDP
 
 on:
   workflow_dispatch:
@@ -11,27 +11,30 @@ jobs:
     steps:
       - name: Configure Core RDP Settings
         run: |
-          Write-Host "🔧 Configuring RDP settings..."
-          # Enable Remote Desktop and disable Network Level Authentication
+          # Enable Remote Desktop and disable Network Level Authentication (if needed)
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
-                           -Name "fDenyTSConnections" -Value 0 -Force
+                             -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                           -Name "UserAuthentication" -Value 0 -Force
+                             -Name "UserAuthentication" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                           -Name "SecurityLayer" -Value 0 -Force
+                             -Name "SecurityLayer" -Value 0 -Force
 
-          # Configure firewall
-          netsh advfirewall firewall delete rule name="RDP-Tailscale" 2>$null
+
+          # Remove any existing rule with the same name to avoid duplication
+          netsh advfirewall firewall delete rule name="RDP-Tailscale"
+          
+          # For testing, allow any incoming connection on port 3389
           netsh advfirewall firewall add rule name="RDP-Tailscale" `
             dir=in action=allow protocol=TCP localport=3389
 
-          # Restart RDP services
-          Restart-Service -Name TermService -Force
-          Write-Host "✅ RDP configured successfully"
+
+          # Correction de l'erreur TermService - Arrêt forcé puis démarrage
+          Stop-Service TermService -Force
+          Start-Service TermService
+
 
       - name: Create RDP User with Secure Password
         run: |
-          Write-Host "👤 Creating RDP user..."
           Add-Type -AssemblyName System.Security
           $charSet = @{
               Upper   = [char[]](65..90)      # A-Z
@@ -58,20 +61,20 @@ jobs:
               exit 1
           }
 
+
       - name: Install Tailscale
         run: |
-          Write-Host "📡 Installing Tailscale..."
           $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
           $installerPath = "$env:TEMP\tailscale.msi"
           
           Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
           Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
           Remove-Item $installerPath -Force
-          Write-Host "✅ Tailscale installed"
+
 
       - name: Establish Tailscale Connection
         run: |
-          Write-Host "🔗 Connecting to Tailscale..."
+          # Bring up Tailscale with the provided auth key and set a unique hostname
           & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID
           
           # Wait for Tailscale to assign an IP
@@ -88,30 +91,29 @@ jobs:
               exit 1
           }
           echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
-          Write-Host "✅ Tailscale IP: $tsIP"
-
+      
       - name: Verify RDP Accessibility
         run: |
-          Write-Host "🔍 Testing RDP connectivity..."
+          Write-Host "Tailscale IP: $env:TAILSCALE_IP"
+          
+          # Test connectivity using Test-NetConnection against the Tailscale IP on port 3389
           $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
           if (-not $testResult.TcpTestSucceeded) {
               Write-Error "TCP connection to RDP port 3389 failed"
               exit 1
           }
-          Write-Host "✅ TCP connectivity successful!"
+          Write-Host "TCP connectivity successful!"
+
 
       - name: Maintain Connection
         run: |
-          Write-Host ""
-          Write-Host "🚀 RDP ACCESS READY"
-          Write-Host "=================="
-          Write-Host "📍 Address: $env:TAILSCALE_IP"
-          Write-Host "👤 Username: RDP"
-          Write-Host "🔑 Password: $(echo $env:RDP_CREDS)"
-          Write-Host "=================="
-          Write-Host ""
+          Write-Host "`n=== RDP ACCESS ==="
+          Write-Host "Address: $env:TAILSCALE_IP"
+          Write-Host "Username: RDP"
+          Write-Host "Password: $(echo $env:RDP_CREDS)"
+          Write-Host "==================`n"
           
-          # Keep runner active
+          # Keep runner active indefinitely (or until manually cancelled)
           while ($true) {
               Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C in workflow to terminate"
               Start-Sleep -Seconds 300
