--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,20 @@
 name: RDP
 
+
 on:
   workflow_dispatch:
+
 
 jobs:
   secure-rdp:
     runs-on: windows-latest
     timeout-minutes: 3600
 
+
     steps:
       - name: Configure Core RDP Settings
         run: |
-          # Enable Remote Desktop and disable Network Level Authentication (if needed)
+          # Enable Remote Desktop 
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
                              -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
@@ -28,9 +31,8 @@ jobs:
             dir=in action=allow protocol=TCP localport=3389
 
 
-          # Correction de l'erreur TermService - Arrêt forcé puis démarrage
-          Stop-Service TermService -Force
-          Start-Service TermService
+          # (Optional) Restart the Remote Desktop service to ensure changes take effect
+          Restart-Service -Name TermService -Force
 
 
       - name: Create RDP User with Secure Password
