--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,11 @@ jobs:
     timeout-minutes: 3600
 
     steps:
-      - name: Configure Core RDP Settings
+      # --- ÉTAPE 1 : MODIFIÉE AVEC LA CORRECTION AGGRESSIVE ---
+      - name: Configure Core RDP Settings (Aggressive Stop)
+        shell: powershell
         run: |
-          # Enable Remote Desktop and disable Network Level Authentication (if needed)
+          # Enable Remote Desktop and disable Network Level Authentication
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
                            -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
@@ -19,18 +21,27 @@ jobs:
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
                            -Name "SecurityLayer" -Value 0 -Force
 
-          # Remove any existing rule with the same name to avoid duplication
+          # Remove any existing rule with the same name
           netsh advfirewall firewall delete rule name="RDP-Tailscale"
           
-          # For testing, allow any incoming connection on port 3389
+          # Allow any incoming connection on port 3389
           netsh advfirewall firewall add rule name="RDP-Tailscale" `
             dir=in action=allow protocol=TCP localport=3389
 
-          # Restart the Remote Desktop service to ensure changes take effect
-          # Ajout de -Force pour résoudre l'erreur des services dépendants
+          # --- CORRECTION AGGRESSIVE ---
+          # Force-stop dependent services first (especially the port redirector)
+          Write-Host "Forcing stop of dependent services (UmRdpService, TermServLicensing)..."
+          Stop-Service -Name "UmRdpService" -Force -ErrorAction SilentlyContinue
+          Stop-Service -Name "TermServLicensing" -Force -ErrorAction SilentlyContinue
+          
+          # Restart the Remote Desktop service
+          Write-Host "Restarting TermService..."
           Restart-Service -Name TermService -Force
+          Write-Host "Service Restarted."
 
+      # --- ÉTAPE 2 : MODIFIÉE POUR L'AFFICHAGE DU MOT DE PASSE ---
       - name: Create RDP User with Secure Password
+        shell: powershell
         run: |
           Add-Type -AssemblyName System.Security
           $charSet = @{
@@ -51,8 +62,8 @@ jobs:
           Add-LocalGroupMember -Group "Administrators" -Member "RDP"
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
           
-          # --- AMÉLIORATION ---
-          # Enregistrer uniquement le mot de passe dans une variable dédiée
+          # --- AMÉLIORATION APPLIQUÉE ---
+          # Enregistrer uniquement le mot de passe pour un affichage propre
           echo "RDP_PASSWORD=$password" >> $env:GITHUB_ENV
           
           if (-not (Get-LocalUser -Name "RDP")) {
@@ -61,8 +72,9 @@ jobs:
           }
 
       - name: Install Tailscale
+        shell: powershell
         run: |
-          # J'ai mis à jour vers une version plus récente, mais vous pouvez garder 1.82.0 si nécessaire
+          # Vous pouvez changer la version si vous le souhaitez
           $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.72.0-amd64.msi"
           $installerPath = "$env:TEMP\tailscale.msi"
           
@@ -71,6 +83,7 @@ jobs:
           Remove-Item $installerPath -Force
 
       - name: Establish Tailscale Connection
+        shell: powershell
         run: |
           # Bring up Tailscale with the provided auth key and set a unique hostname
           & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID
@@ -91,6 +104,7 @@ jobs:
           echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
       
       - name: Verify RDP Accessibility
+        shell: powershell
         run: |
           Write-Host "Tailscale IP: $env:TAILSCALE_IP"
           
@@ -102,12 +116,14 @@ jobs:
           }
           Write-Host "TCP connectivity successful!"
 
+      # --- ÉTAPE 6 : MODIFIÉE POUR L'AFFICHAGE DU MOT DE PASSE ---
       - name: Maintain Connection
+        shell: powershell
         run: |
           Write-Host "`n=== RDP ACCESS ==="
           Write-Host "Address: $env:TAILSCALE_IP"
           Write-Host "Username: RDP"
-          # --- AMÉLIORATION ---
+          # --- AMÉLIORATION APPLIQUÉE ---
           # Utiliser la variable RDP_PASSWORD pour un affichage propre
           Write-Host "Password: $env:RDP_PASSWORD"
           Write-Host "==================`n"
