--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,164 +1,121 @@
+name: RDP
+
+
 on:
   workflow_dispatch:
 
-name: RDP
 
 jobs:
   secure-rdp:
     runs-on: windows-latest
     timeout-minutes: 3600
 
+
     steps:
       - name: Configure Core RDP Settings
-        shell: powershell
         run: |
-          # Enable Remote Desktop (do not lower security by disabling NLA)
+          # Enable Remote Desktop and disable Network Level Authentication (if needed)
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
-                           -Name "fDenyTSConnections" -Value 0 -Force
+                             -Name "fDenyTSConnections" -Value 0 -Force
+          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
+                             -Name "UserAuthentication" -Value 0 -Force
+          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
+                             -Name "SecurityLayer" -Value 0 -Force
 
-          # Do NOT disable Network Level Authentication (NLA) here.
-          # If you have a specific need to change UserAuthentication or SecurityLayer,
-          # do it intentionally and understand the security impact.
 
-          # Remove any existing rule with the same name, then allow RDP only from Tailscale IP space (100.64.0.0/10)
-          netsh advfirewall firewall delete rule name="RDP-Tailscale" 2>$null
+          # Remove any existing rule with the same name to avoid duplication
+          netsh advfirewall firewall delete rule name="RDP-Tailscale"
+          
+          # For testing, allow any incoming connection on port 3389
           netsh advfirewall firewall add rule name="RDP-Tailscale" `
-            dir=in action=allow protocol=TCP localport=3389 remoteip=100.64.0.0/10
+            dir=in action=allow protocol=TCP localport=3389
 
-          Write-Host "RDP enabled and firewall rule restricted to Tailscale IP space (100.64.0.0/10)."
 
-          # WARNING: Restarting TermService on a GitHub-hosted runner can destabilize the runner
-          # or cause the job to fail. Uncomment the lines below ONLY if you understand the risk.
-          # If you do restart TermService it may terminate the runner session.
-          # Example guarded restart (commented out by default):
-          # if (Get-Service -Name TermService -ErrorAction SilentlyContinue) {
-          #     Write-Host "Restarting TermService (guarded)."
-          #     Restart-Service -Name TermService -Force -ErrorAction SilentlyContinue
-          #     Start-Sleep -Seconds 5
-          # }
+          # (Optional) Restart the Remote Desktop service to ensure changes take effect
+          Restart-Service -Name TermService -Force
+
 
       - name: Create RDP User with Secure Password
-        shell: powershell
         run: |
           Add-Type -AssemblyName System.Security
-
           $charSet = @{
               Upper   = [char[]](65..90)      # A-Z
               Lower   = [char[]](97..122)     # a-z
               Number  = [char[]](48..57)      # 0-9
               Special = ([char[]](33..47) + [char[]](58..64) +
-                         [char[]](91..96) + [char[]](123..126))
+                         [char[]](91..96) + [char[]](123..126)) # Special characters
           }
-
           $rawPassword = @()
           $rawPassword += $charSet.Upper | Get-Random -Count 4
           $rawPassword += $charSet.Lower | Get-Random -Count 4
           $rawPassword += $charSet.Number | Get-Random -Count 4
           $rawPassword += $charSet.Special | Get-Random -Count 4
           $password = -join ($rawPassword | Sort-Object { Get-Random })
-
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
-
-          # Create the user (if it exists, update the password)
-          if (Get-LocalUser -Name "RDP" -ErrorAction SilentlyContinue) {
-              Write-Host "User 'RDP' already exists. Updating password."
-              $user = Get-LocalUser -Name "RDP"
-              $user | Set-LocalUser -Password $securePass
-          } else {
-              New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires -PasswordNeverExpires
-          }
-
-          # Add to Remote Desktop Users only (avoid giving admin rights unless needed)
+          New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
+          Add-LocalGroupMember -Group "Administrators" -Member "RDP"
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
-
-          # Mask the password in the workflow logs and expose it to subsequent steps if needed.
-          # Note: masking prevents accidental echo in logs, but storing it in GITHUB_ENV still keeps it in memory.
-          Write-Host "::add-mask::$password"
-          echo "RDP_PASSWORD=$password" >> $env:GITHUB_ENV
-
+          
+          echo "RDP_CREDS=User: RDP | Password: $password" >> $env:GITHUB_ENV
+          
           if (-not (Get-LocalUser -Name "RDP")) {
               Write-Error "User creation failed"
               exit 1
           }
 
+
       - name: Install Tailscale
-        shell: powershell
         run: |
-          $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.72.0-amd64.msi"
+          $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
           $installerPath = "$env:TEMP\tailscale.msi"
+          
           Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
           Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
           Remove-Item $installerPath -Force
 
+
       - name: Establish Tailscale Connection
-        shell: powershell
-        env:
-          TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
         run: |
-          $tsExe = Join-Path $env:ProgramFiles "Tailscale\tailscale.exe"
-          if (-not (Test-Path $tsExe)) {
-              Write-Error "tailscale.exe not found at $tsExe"
-              exit 1
-          }
-
-          & $tsExe up --authkey=$env:TAILSCALE_AUTH_KEY --hostname=("gh-runner-" + $env:GITHUB_RUN_ID)
-
+          # Bring up Tailscale with the provided auth key and set a unique hostname
+          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID
+          
+          # Wait for Tailscale to assign an IP
           $tsIP = $null
           $retries = 0
-          while (-not $tsIP -and $retries -lt 12) {
-              $ips = (& $tsExe ip -4) -split "`n" | ForEach-Object { $_.Trim() } | Where-Object { $_ -match '^\d+\.' }
-              if ($ips) { $tsIP = $ips[0] }
+          while (-not $tsIP -and $retries -lt 10) {
+              $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
               Start-Sleep -Seconds 5
               $retries++
           }
-
+          
           if (-not $tsIP) {
               Write-Error "Tailscale IP not assigned. Exiting."
               exit 1
           }
-
           echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
-          Write-Host "Tailscale IP: $tsIP"
-
+      
       - name: Verify RDP Accessibility
-        shell: powershell
         run: |
           Write-Host "Tailscale IP: $env:TAILSCALE_IP"
-
-          $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389 -WarningAction SilentlyContinue
+          
+          # Test connectivity using Test-NetConnection against the Tailscale IP on port 3389
+          $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
           if (-not $testResult.TcpTestSucceeded) {
               Write-Error "TCP connection to RDP port 3389 failed"
               exit 1
           }
           Write-Host "TCP connectivity successful!"
 
+
       - name: Maintain Connection
-        shell: powershell
         run: |
           Write-Host "`n=== RDP ACCESS ==="
           Write-Host "Address: $env:TAILSCALE_IP"
           Write-Host "Username: RDP"
-          Write-Host "Password: $env:RDP_PASSWORD"
+          Write-Host "Password: $(echo $env:RDP_CREDS)"
           Write-Host "==================`n"
-
-          # Keep the runner alive for manual RDP connection.
-                      - name: Publish PowerShell Module to PowerShellGallery
-  # You may pin to the exact commit or the version.
-  # uses: mod-posh/PublishPowerShellModule@4c876309d52cad8b4c3faa1bfc449d5fffe36a9b
-  uses: mod-posh/PublishPowerShellModule@v0.0.1.0
-  with:
-    # The name of the PowerShell module
-    ModuleName: 
-    # The source directory containing the module (relative to the workspace)
-    Source: # optional, default is 
-    # The output directory for storing the module (relative to the workspace)
-    Output: # optional, default is 
-    # PowerShell Gallery API Key
-    ApiKey: 
-    # Enable debug mode
-    Debug: # optional, default is false
           
-          # NOTE: This will hold the job open until timeout-minutes or until someone cancels the job.
+          # Keep runner active indefinitely (or until manually cancelled)
           while ($true) {
               Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C in workflow to terminate"
               Start-Sleep -Seconds 300
